--- a/index.css
+++ b/index.css
@@ -203,13 +203,12 @@ a {
 }
 
 @media screen and (max-width : 900px) {
-  .home {
-    flex-direction: column;
-    margin-top: 100px;
+  .home{
+    height: max-content;
+    margin-top: 80px;
   }
-
   .image {
-    margin-top: 15px;
+    display: none;
   }
 }
 
@@ -242,13 +241,9 @@ a {
   font-family: "Fira Code";
 }
 
-@media screen and (max-width:450px) {
+@media screen and (max-width:500px) {
   .aboutDescription {
     width: 95%;
-  }
-
-  .about{
-    margin-top: 100px;
   }
 }
 
