--- a/index.css
+++ b/index.css
@@ -148,6 +148,10 @@ a {
   font-family: "Fira Code";
 }
 
+.navlink:hover{
+  color: rgb(187, 114, 206);
+}
+
 @media screen and (min-width:900px) {
   .burger {
     display: none;
@@ -160,12 +164,16 @@ a {
     position: absolute;
     flex-direction: column;
     top: 80px;
-    right: 60px;
+    right: 10%;
     background-color: #111;
     padding: 10px 30px;
-    height: 200px;
-    box-shadow: 3px 3px 3px #223;
-    border-radius: 5px;
+    height: 250px;
+    border-radius: 0px 0px 5px 5px;
+    border:5px solid #222;
+  }
+
+  .showNav{
+    display: flex;
   }
 }
 
@@ -195,7 +203,7 @@ a {
   height: 100%;
   text-align: center;
   color: whitesmoke;
-  font-size: 80px;
+  font-size: clamp(40px, 10vw + 1rem, 80px);
   font-weight: 500;
   display: flex;
   justify-content: center;
