--- a/index.css
+++ b/index.css
@@ -320,7 +320,7 @@ a {
   padding: 5px;
   text-align: center;
   font-family: "Fira Code";
-  color: #4f659e;
+  color: #88a5ee;
   font-weight: bold;
 }
 
@@ -380,7 +380,7 @@ a {
   font-family: "Fira Code";
     font-weight: bold;
   text-align: center;
-  color: #4f659e;
+  color: #88a5ee;
   margin: 10px 0px;
   font-size: 18px;
 }
@@ -408,7 +408,7 @@ a {
 
 .extraprojectinfotitle{
   text-align: center;
-  color: #4f659e;
+  color: #88a5ee;
   font-size: 18px;
     font-weight: bold;
 }
