--- a/index.css
+++ b/index.css
@@ -218,7 +218,7 @@ a {
 }
 
 .actionbtnimg{
-  /* width: 20px; */
+  width: 20px;
 }
 
 .actionbtntext{
@@ -280,8 +280,8 @@ a {
 }
 
 .skillImage {
-  /* width: 70px;
-  height: auto; */
+  width: 70px;
+  height: auto;
   display: block;
   margin: auto;
 }
@@ -340,8 +340,8 @@ a {
 
 .projectImage{
   object-fit: cover;
-  /* width: 100%;
-  height: 200px; */
+  width: 100%;
+  height: 200px;
   border-radius: 5px 5px 0px 0px;
 }
 
@@ -506,7 +506,7 @@ a {
 }
 
 .mediaLinks img {
-  /* width: 30px; */
+  width: 30px;
 }
 
 .spinner {
@@ -542,7 +542,7 @@ a {
 }
 
 .success img,.error img{
-  /* width: 30px; */
+  width: 30px;
 }
 
 .msg{
