--- a/index.css
+++ b/index.css
@@ -49,7 +49,8 @@ a {
   padding: 10px;
   position: sticky;
   top: 0px;
-  z-index:10
+  z-index:10;
+  height: 80px;
 }
 
 .title {
@@ -156,6 +157,7 @@ a {
   justify-content: space-around;
   align-items: center;
   padding: 120px 10px;
+  height: calc(100vh - 80px);
 }
 
 .image {
