--- a/index.css
+++ b/index.css
@@ -309,8 +309,7 @@ a {
   width: 80%;
   margin: auto;
   display: grid;
-  /* grid-template-columns: repeat(auto-fit, minmax(400px, 1fr)); */
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   gap: 20px;
 }
 
@@ -610,6 +609,5 @@ a {
 
   .projectsContainer {
     width: 95%;
-    display: block;
   }
 }
