--- a/index.css
+++ b/index.css
@@ -309,7 +309,7 @@ a {
   width: 80%;
   margin: auto;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-template-columns:repeat(auto-fit,minmax(400px,1fr));
   gap: 20px;
 }
 
@@ -332,6 +332,7 @@ a {
   overflow: hidden;
 }
 
+.projectImageContainer{}
 
 .projectImage{
   object-fit: cover;
@@ -609,5 +610,7 @@ a {
 
   .projectsContainer {
     width: 95%;
+    display: block;
+    margin: 10px auto;
   }
 }
